--- a/build.gradle
+++ b/build.gradle
@@ -10,25 +10,25 @@ buildscript {
             }
         }
     }
-    dependencies { classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.16.1" }
+    dependencies {
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.16.1"
+    }
 }
 
 
 
 plugins {
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-    id 'org.springframework.boot' version '2.7.5'
     id 'java'
     id "maven-publish"
     id "com.jfrog.artifactory" version "4.16.1"
 }
 
-apply plugin: "com.jfrog.artifactory"
 configurations {
     deployerJars
 }
 
-group = 'com.example'
+group = 'com.northstarcomm'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -53,14 +53,13 @@ repositories {
 dependencies {
     implementation 'com.github.derjust:spring-data-dynamodb:5.1.0'
     implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.12.322'
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.data:spring-data-releasetrain:Neumann-SR9'
-//    implementation 'org.projectlombok:lombok:1.18.22'
-    implementation 'junit:junit:4.13.1'
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     implementation 'commons-io:commons-io:2.11.0'
+
+//    implementation 'org.springframework.data:spring-data-releasetrain:Neumann-SR9'
+//    implementation 'org.projectlombok:lombok:1.18.22'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation "org.mockito:mockito-core:4.8.0"
 }
 
 artifactory {
@@ -100,6 +99,7 @@ publishing {
 
 wrapper {
     gradleVersion = '7.6.1'
+    distributionType = Wrapper.DistributionType.ALL
 }
 
 allprojects {
