--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven{
-        url "${artifactory_contextUrl}/test-gradle-dev-local"
+        url "${artifactory_contextUrl}/${artifactory_key}"
         credentials{
             username = "${artifactory_user}"
             password = "${artifactory_password}"
@@ -66,7 +66,7 @@ artifactory {
     contextUrl = "${artifactory_contextUrl}"
     publish {
         repository {
-            repoKey = 'test-gradle-dev-local'
+            repoKey = "${artifactory_key}"
             username = "${artifactory_user}"
             password = "${artifactory_password}"
             maven = true
